updated todo-container for 768px breakpoint

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
             <p class="error-info"></p>
             <ul>
                 <li class="todo-list__task">
-                    <p class="todo-list__task-name">Zrobić śniadanie bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
-                    <p class="todo-list__task-date">[30.06.2023]</p>
+                    <div class="todo-list__task-text">
+                        <p class="todo-list__task-name">Zrobić śniadanie bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                        <p class="todo-list__task-date">[30.06.2023]</p>
+                    </div>
                     <div class="task-btns">
                         <button class="btn task-btn btn-check"><i class="fa-solid fa-circle-check"></i></button>
                         <button class="btn task-btn btn-edit">EDIT</button>
@@ -45,8 +47,10 @@
                     </div>
                 </li>
                 <li class="todo-list__task">
-                    <p class="todo-list__task-name">Wypić kawę</p>
-                    <p class="todo-list__task-date">[01.07.2023]</p>
+                    <div class="todo-list__task-text">
+                        <p class="todo-list__task-name">Wypić kawę</p>
+                        <p class="todo-list__task-date">[01.07.2023]</p>
+                    </div>
                     <div class="task-btns">
                         <button class="btn task-btn btn-check"><i class="fa-regular fa-circle"></i></button>
                         <button class="btn task-btn btn-edit">EDIT</button>
