added style for error-info for every breakpoint

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="todo-list">
             <h3 class="todo-list__heading">Task List:</h3>
-            <p class="error-info"></p>
+            <p class="error-info">Insert task name!</p>
             <ul>
                 <li class="todo-list__task">
                     <div class="todo-list__task-text">
