added edit-task-desktop - menu for editing tasks on desktop devices

--- a/index.html
+++ b/index.html
@@ -79,6 +79,24 @@
         </div>
     </div>
 
+    <div class="edit-task-desktop">
+        <h3 class="edit-task-desktop__header">Edit Task</h3>
+        <div class="edit-task-desktop__inputs">
+            <span>
+                <label for="taskname" class="edit-task-desktop__label">Task Name:</label>
+                <input type="text" name="taskname" class="edit-task-desktop__input" placeholder="Insert task name...">
+            </span>
+            <span>
+                <label for="taskdate" class="edit-task-desktop__label">Task Date:</label>
+                <input type="date" name="taskdate" class="edit-task-desktop__input">
+            </span>
+        </div>
+        <div class="edit-task-desktop__btns">
+            <button class="btn edit-task__btn">Apply</button>
+            <button class="btn edit-task__btn">Cancel</button>
+        </div>
+    </div>
+
     <script src="./js/main.js"></script>
 </body>
 
