--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
             <div class="todo-header__tools">
                 <div class="todo-header__inputs">
                     <span>
-                        <label for="taskname" class="todo-header__label">Task Name:</label>
+                        <label class="todo-header__label">Task Name:</label>
                         <input type="text" name="taskname" class="todo-header__input todo-header__input-tname"
                             placeholder="Insert task name...">
                     </span>
                     <span>
-                        <label for="taskdate" class="todo-header__label">Task Date:</label>
+                        <label class="todo-header__label">Task Date:</label>
                         <input type="date" name="taskdate" class="todo-header__input todo-header__input-tdate">
                     </span>
                 </div>
@@ -38,7 +38,7 @@
             <ul class="todo-list__ul">
                 <li class="todo-list__task">
                     <div class="todo-list__task-text">
-                        <p class="todo-list__task-name">Zrobić śniadanie bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                        <p class="todo-list__task-name todo-list__task-name--completed">Zrobić śniadanie bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                         <p class="todo-list__task-date">[30.06.2023]</p>
                     </div>
                     <div class="task-btns">
@@ -66,11 +66,11 @@
         <h3 class="edit-task-mobile__header">Edit Task</h3>
         <div class="edit-task-mobile__inputs">
             <span>
-                <label for="taskname" class="edit-task-mobile__label">Task Name:</label>
+                <label class="edit-task-mobile__label">Task Name:</label>
                 <input type="text" name="taskname" class="edit-task-mobile__input" placeholder="Insert task name...">
             </span>
             <span>
-                <label for="taskdate" class="edit-task-mobile__label">Task Date:</label>
+                <label class="edit-task-mobile__label">Task Date:</label>
                 <input type="date" name="taskdate" class="edit-task-mobile__input">
             </span>
         </div>
@@ -84,11 +84,11 @@
         <h3 class="edit-task-desktop__header">Edit Task</h3>
         <div class="edit-task-desktop__inputs">
             <span>
-                <label for="taskname" class="edit-task-desktop__label">Task Name:</label>
+                <label class="edit-task-desktop__label">Task Name:</label>
                 <input type="text" name="taskname" class="edit-task-desktop__input" placeholder="Insert task name...">
             </span>
             <span>
-                <label for="taskdate" class="edit-task-desktop__label">Task Date:</label>
+                <label class="edit-task-desktop__label">Task Date:</label>
                 <input type="date" name="taskdate" class="edit-task-desktop__input">
             </span>
         </div>
