added the first part of JS code for displaying edit-task-mobile popup

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <ul class="todo-list__ul">
                 <li class="todo-list__task">
                     <div class="todo-list__task-text">
-                        <p class="todo-list__task-name todo-list__task-name--completed">Zrobić śniadanie bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+                        <p class="todo-list__task-name todo-list__task-name--completed">Zrobić śniadanie
+                            bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
                         <p class="todo-list__task-date">[30.06.2023]</p>
                     </div>
                     <div class="task-btns">
@@ -67,16 +68,17 @@
         <div class="edit-task-mobile__inputs">
             <span>
                 <label class="edit-task-mobile__label">Task Name:</label>
-                <input type="text" name="taskname" class="edit-task-mobile__input" placeholder="Insert task name...">
+                <input type="text" name="taskname" class="edit-task-mobile__input edit-task__input-tname"
+                    placeholder="Insert task name...">
             </span>
             <span>
                 <label class="edit-task-mobile__label">Task Date:</label>
-                <input type="date" name="taskdate" class="edit-task-mobile__input">
+                <input type="date" name="taskdate" class="edit-task-mobile__input edit-task__input-tdate">
             </span>
         </div>
         <div class="edit-task-mobile__btns">
-            <button class="btn edit-task__btn">Apply</button>
-            <button class="btn edit-task__btn">Cancel</button>
+            <button class="btn edit-task__btn edit-task__btn-apply">Apply</button>
+            <button class="btn edit-task__btn edit-task__btn-cancel">Cancel</button>
         </div>
     </div>
 
@@ -85,16 +87,17 @@
         <div class="edit-task-desktop__inputs">
             <span>
                 <label class="edit-task-desktop__label">Task Name:</label>
-                <input type="text" name="taskname" class="edit-task-desktop__input" placeholder="Insert task name...">
+                <input type="text" name="taskname" class="edit-task-desktop__input edit-task__input-tname"
+                    placeholder="Insert task name...">
             </span>
             <span>
                 <label class="edit-task-desktop__label">Task Date:</label>
-                <input type="date" name="taskdate" class="edit-task-desktop__input">
+                <input type="date" name="taskdate" class="edit-task-desktop__input edit-task__input-tdate">
             </span>
         </div>
         <div class="edit-task-desktop__btns">
-            <button class="btn edit-task__btn">Apply</button>
-            <button class="btn edit-task__btn">Cancel</button>
+            <button class="btn edit-task__btn edit-task__btn-apply">Apply</button>
+            <button class="btn edit-task__btn edit-task__btn-cancel">Cancel</button>
         </div>
     </div>
 
