added edit-task__info p in HTML, CSS styles and JS functionality

--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                 <label class="edit-task-mobile__label">Task Date:</label>
                 <input type="date" name="taskdate" class="edit-task-mobile__input edit-task__input-tdate">
             </span>
+            <span>
+                <p class="edit-task__info"></p>
+            </span>
         </div>
         <div class="edit-task-mobile__btns">
             <button class="btn edit-task__btn edit-task__btn-apply">Apply</button>
