added edit-task__info p in HTML and CCS styles for desktop devices

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-    <div class="edit-task-desktop">
+    <div class="edit-task-desktop edit-task-desktop--active">
         <h3 class="edit-task-desktop__header">Edit Task</h3>
         <div class="edit-task-desktop__inputs">
             <span>
@@ -98,6 +98,9 @@
                 <input type="date" name="taskdate" class="edit-task-desktop__input edit-task__input-tdate">
             </span>
         </div>
+        <span>
+            <p class="edit-task__info">Insert task name and task date to apply changes!</p>
+        </span>
         <div class="edit-task-desktop__btns">
             <button class="btn edit-task__btn edit-task__btn-apply">Apply</button>
             <button class="btn edit-task__btn edit-task__btn-cancel">Cancel</button>
