added JS code for displaying edit-task popup (desktop or mobile) depending on device type

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-    <div class="edit-task-desktop edit-task-desktop--active">
+    <div class="edit-task-desktop">
         <h3 class="edit-task-desktop__header">Edit Task</h3>
         <div class="edit-task-desktop__inputs">
             <span>
@@ -99,7 +99,7 @@
             </span>
         </div>
         <span>
-            <p class="edit-task__info">Insert task name and task date to apply changes!</p>
+            <p class="edit-task__info"></p>
         </span>
         <div class="edit-task-desktop__btns">
             <button class="btn edit-task__btn edit-task__btn-apply">Apply</button>
