--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         </div>
         <div class="todo-list">
             <h3 class="todo-list__heading">Task List:</h3>
-            <p class="error-info"></p>
-            <ul class="todo-list__ul">
+            <p class="error-info">Insert task name and task date to add new task!</p>
+
+            <h4 class="todo-list__task-time-heading">Past Tasks</h4>
+            <ul class="todo-list__ul todo-list__ul-past-tasks">
                 <li class="todo-list__task">
                     <div class="todo-list__task-text">
                         <p class="todo-list__task-name todo-list__task-name--completed">Zrobić śniadanie
@@ -48,10 +50,14 @@
                         <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
                     </div>
                 </li>
+            </ul>
+
+            <h4 class="todo-list__task-time-heading">DEADLINE: next 7 days</h4>
+            <ul class="todo-list__ul todo-list__ul-7days-tasks">
                 <li class="todo-list__task">
                     <div class="todo-list__task-text">
-                        <p class="todo-list__task-name">Wypić kawę</p>
-                        <p class="todo-list__task-date">[01.07.2023]</p>
+                        <p class="todo-list__task-name">Odkurzyć pokój</p>
+                        <p class="todo-list__task-date">[07.07.2023]</p>
                     </div>
                     <div class="task-btns">
                         <button class="btn task-btn btn-check"><i class="fa-regular fa-circle"></i></button>
@@ -60,6 +66,37 @@
                     </div>
                 </li>
             </ul>
+
+            <h4 class="todo-list__task-time-heading">DEADLINE: next 30 days</h4>
+            <ul class="todo-list__ul todo-list__ul-30days-tasks">
+                <li class="todo-list__task">
+                    <div class="todo-list__task-text">
+                        <p class="todo-list__task-name">Kupić komputer</p>
+                        <p class="todo-list__task-date">[27.07.2023]</p>
+                    </div>
+                    <div class="task-btns">
+                        <button class="btn task-btn btn-check"><i class="fa-regular fa-circle"></i></button>
+                        <button class="btn task-btn btn-edit">EDIT</button>
+                        <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                </li>
+            </ul>
+
+            <h4 class="todo-list__task-time-heading">DEADLINE: later than 30 days</h4>
+            <ul class="todo-list__ul todo-list__ul-30days-tasks">
+                <li class="todo-list__task">
+                    <div class="todo-list__task-text">
+                        <p class="todo-list__task-name">Kupić prezenty świąteczne</p>
+                        <p class="todo-list__task-date">[27.11.2023]</p>
+                    </div>
+                    <div class="task-btns">
+                        <button class="btn task-btn btn-check"><i class="fa-regular fa-circle"></i></button>
+                        <button class="btn task-btn btn-edit">EDIT</button>
+                        <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
+                    </div>
+                </li>
+            </ul>
+
         </div>
     </div>
 
