added JS for assigning new tasks to a time range

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="todo-list">
             <h3 class="todo-list__heading">Task List:</h3>
-            <p class="error-info">Insert task name and task date to add new task!</p>
+            <p class="error-info"></p>
 
             <h4 class="todo-list__task-time-heading">Past Tasks</h4>
             <ul class="todo-list__ul todo-list__ul-past-tasks">
@@ -82,8 +82,8 @@
                 </li>
             </ul>
 
-            <h4 class="todo-list__task-time-heading">DEADLINE: later than 30 days</h4>
-            <ul class="todo-list__ul todo-list__ul-30days-tasks">
+            <h4 class="todo-list__task-time-heading">DEADLINE: later than next 30 days</h4>
+            <ul class="todo-list__ul todo-list__ul-later-30days-tasks">
                 <li class="todo-list__task">
                     <div class="todo-list__task-text">
                         <p class="todo-list__task-name">Kupić prezenty świąteczne</p>
