--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <p class="error-info"></p>
 
             <div class="todo-list__div">
-                <h4 class="todo-list__task-time-heading todo-list__task-time-heading--active">Past Tasks</h4>
+                <h4 class="todo-list__task-time-heading">Past Tasks</h4>
                 <ul class="todo-list__ul todo-list__ul-past-tasks ">
-                    <li class="todo-list__task">
+                    <!-- <li class="todo-list__task">
                         <div class="todo-list__task-text">
                             <p class="todo-list__task-name todo-list__task-name--completed">Zrobić śniadanie
                                 bbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaa</p>
@@ -50,14 +50,14 @@
                             <button class="btn task-btn btn-edit">EDIT</button>
                             <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
             <div class="todo-list__div">
-                <h4 class="todo-list__task-time-heading todo-list__task-time-heading--active">DEADLINE: next 7 days</h4>
+                <h4 class="todo-list__task-time-heading">DEADLINE: next 7 days</h4>
                 <ul class="todo-list__ul todo-list__ul-7days-tasks">
-                    <li class="todo-list__task">
+                    <!-- <li class="todo-list__task">
                         <div class="todo-list__task-text">
                             <p class="todo-list__task-name">Odkurzyć pokój</p>
                             <p class="todo-list__task-date">[07.07.2023]</p>
@@ -67,15 +67,15 @@
                             <button class="btn task-btn btn-edit">EDIT</button>
                             <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
             <div class="todo-list__div">
-                <h4 class="todo-list__task-time-heading todo-list__task-time-heading--active">DEADLINE: next 30 days
+                <h4 class="todo-list__task-time-heading">DEADLINE: next 30 days
                 </h4>
                 <ul class="todo-list__ul todo-list__ul-30days-tasks">
-                    <li class="todo-list__task">
+                    <!-- <li class="todo-list__task">
                         <div class="todo-list__task-text">
                             <p class="todo-list__task-name">Kupić komputer</p>
                             <p class="todo-list__task-date">[27.07.2023]</p>
@@ -85,17 +85,17 @@
                             <button class="btn task-btn btn-edit">EDIT</button>
                             <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
 
             <div class="todo-list__div">
-                <h4 class="todo-list__task-time-heading todo-list__task-time-heading--active">DEADLINE: later than next
+                <h4 class="todo-list__task-time-heading">DEADLINE: later than next
                     30
                     days</h4>
                 <ul class="todo-list__ul todo-list__ul-later-30days-tasks">
-                    <li class="todo-list__task">
+                    <!-- <li class="todo-list__task">
                         <div class="todo-list__task-text">
                             <p class="todo-list__task-name">Kupić prezenty świąteczne</p>
                             <p class="todo-list__task-date">[27.11.2023]</p>
@@ -105,7 +105,7 @@
                             <button class="btn task-btn btn-edit">EDIT</button>
                             <button class="btn task-btn btn-delete"><i class="fa-solid fa-xmark"></i></button>
                         </div>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
 
