added HTML error-info 'No tasks on the list.'

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="todo-list">
             <h3 class="todo-list__heading">Task List:</h3>
-            <p class="error-info"></p>
+            <p class="error-info">No tasks on the list.</p>
 
             <div class="todo-list__div">
                 <h4 class="todo-list__task-time-heading">Past Tasks</h4>
